public/assets/css/style.css
/* ... */
    @media (max-width: 767.98px) {
    .timeline::after {
    left: 15px;
    }
    .half-circles span:nth-child(10),
    .half-circles span:nth-child(11),
    .half-circles span:nth-child(12),
    .half-circles span:nth-child(13) {
    display: none;
    }
    .timeline-container {
    width: 100%;
    padding-left: 50px;
    padding-right: 30px;
    }
    
    .timeline-container.right {
    left: 0%;
    }
    
    .timeline-container.left::after,
    .timeline-container.right::after {
    left: 82px;
    }
    
    .timeline-container.left::before,
    .timeline-container.right::before {
    left: 100px;
    border-color: transparent #006e51 transparent transparent;
    }
    
    .timeline-container.left .date,
    .timeline-container.right .date {
    right: auto;
    left: -9px;
    }
    
    .timeline-container.left .icon,
    .timeline-container.right .icon {
    right: auto;
    left: 146px;
    }
    
    .timeline-container.left .content,
    .timeline-container.right .content {
    padding: 30px 30px 30px 30px;
    border-radius: 50px 0;
    }
    .draw-logo-img {
    width: 50px;
    height: 50px;
    }
    .logo-draw {
    margin-right: 10px;
    }
    .draw-name {
    font-size: 24px;
    }
    .date-block a {
    max-width: 250px;
    font-size: 14px;
    }
    .sd-text-part h3 {
    font-size: 22px;
    }
    .date-block {
    margin: 5px 0;
    }
    .sd-text-part p {
    font-size: 12px;
    }
    }
    .footer-logo img{
      max-width: 150px;
    }
    @media (max-width: 650px) {
    .footer-links ul {
    text-align: right;
    }
    .footer-links ul li:not(:last-child) {
    margin-right: 5px;
    }
    .footer-logo {
    max-width: 90px;
    margin: 0 auto;
}
.footer-links ul {
  text-align: center;
}
}
/* @media (max-width:360px) {
  .daterangepicker .ranges {
    float: left !important;
  }
  .daterangepicker .ranges li {
    font-size: 9px !important;
    padding: 2px 2px !important;
  }
  .daterangepicker .drp-calendar {
    float: left !important;
  }
  .daterangepicker .calendar-table th, .daterangepicker .calendar-table td {
    width: 13px !important;
    min-width: 13px !important;
    font-size: 9px !important;
    line-height: 13px !important;
  }
  .daterangepicker .drp-calendar.left {
    padding: 3px 0 3px 3px !important;
}
.daterangepicker .drp-calendar.right {
  padding: 3px !important;
}
}  */
.marque-div { 
  width: calc(100% - 130px); 
}
.marque-div ul li:last-child:after {display:none;}
/* .marquee-container .marquee:last-child { 
  display: none; 
} */
section.announcement {
    background: #f07f00;
    padding: 5px 0 0;
    height: 45px !important;
}

/* invesment module */ 
 
.back-section1, .back-section2 { 
  height: auto; 
  padding: 30px; 
  position: relative; 
} 
.back-section2::before {
  border-radius: 17px;
  height: 98%;
  width: 95%;
  content: '';
  border: 1px solid #ddd;
  background: #fff;
  box-shadow: 1px 1px 5px 7px rgb(0 0 0 / 8%);
  position: absolute;
  z-index: 0;
  right: -14px;
  top: 13px;
}
.back-section1:before {
  height: 90%;
  width: 90%;
  content: '';
  border: 1px solid #ddd;
  border-radius: 15px 0 0 15px;
  
  background: #ebeef5;
  /* left: 0; */
  /* top: 0; */
  box-shadow: 1px 1px 5px 7px rgb(0 0 0 / 8%);
  position: absolute;
  z-index: 0;
  right: 0;
}
.z-index-1 {
  z-index: 1;
}
.back-section1 .row { 
  position: relative; 
  z-index: 1; 
} 
.absolute-div1 { 
  background: #c22361; 
  padding: 10px; 
  box-sizing: border-box; 
  border-radius: 15px; 
  box-shadow: 0px 0px 18px 8px rgb(0 0 0 / 20%); 
} 
.selected-investment {
  background: #bc2263;
  color: #fff;
}
.height-380px{
  height: 400px !important;
}
.font-20px-17px{
  font-size: 20px !important;
}
@media (max-width:574.999px) { 
  .back-section1:before { 
      width: 100%; 
  } 
  .back-section2:before { 
    width: 100%; 
  } 
  .margin-left-52px{
    margin-left : 0 !important;
  }
  .clearfix.p-4.z-index-1.back-section2.mx-4 {
    margin-left: -4px !important;
  }
  .absolute-div1 {
    background: #c22361;
    padding: 5px;
    box-sizing: border-box;
    border-radius: 15px;
    box-shadow: 0px 0px 18px 8px rgb(0 0 0 / 20%);
  }
  .height-380px{
    height: auto !important;
  }
  .font-20px-17px{
    font-size: 17px !important;
  }
}

.announcement-block-icon { 
  max-width: 130px; 
}

/* .iSAVrt */
/* .bQdYbR  */
.kmecXQ{
  min-width: 50px!important
}
.hbotQl{
  overflow: visible!important;
  font-size: 14px!important;
}
.glyQNg{
  /* padding: 2px!important;
  padding-left: 15px!important; */
}
/* invesment module */  
.eVPPvF{
  /* padding: 2px!important;
  padding-left: 15px!important; */

}
.rdt_Table{
  min-width: fit-content!important;
}
.rdt_TableCell:first-child, .rdt_TableCol:first-child{
  min-width: 10px!important;
  text-align: center!important;
}
.rdt_TableHead{
  font-weight: bold!important;
}
.back-section {  
  height: auto;  
  padding: 30px;  
  position: relative;  
}  
.back-section:before {  
  height: 100%;  
    width: 90%;  
    content: '';  
    border: 1px solid #ddd;  
    border-radius: 15px;  
    background: #fff;  
    left: 0;  
    top: 0;  
    box-shadow: 1px 1px 5px 7px rgb(0 0 0 / 8%);  
    position: absolute;  
    z-index: 0;  
}  
.back-section .row {  
  position: relative;  
  z-index: 1;  
}  
.absolute-div {  
  background: #c22361;  
  padding: 30px;  
  box-sizing: border-box;  
  border-radius: 15px;  
  box-shadow: 0px 0px 18px 8px rgb(0 0 0 / 20%);  
}  
/* .bQdYbR{
  min-width: 80px!important;
} */
/* ... */

